Scrollbar fix 1

--- a/theme.css
+++ b/theme.css
@@ -16,6 +16,7 @@
     scroll-behavior: smooth;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    scrollbar-width: none;
 }
 
 body {
